--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <script type="text/javascript" src="./script.js"></script>
 </head>
 <body>
-    
+
+    <h1>Tic Tac Toe</h1>
+    <div class="input_container">
+        <input type="text" name="player_one_name" id="player_one_name" placeholder="Player Name">
+        <input type="text" name="player_two_name" id="player_two_name" placeholder="Player Name">
+    </div>
+    <div class="board_container">
+        <div class="board_square"></div>
+        <div class="board_square"></div>
+        <div class="board_square"></div>
+        <div class="board_square"></div>
+        <div class="board_square"></div>
+        <div class="board_square"></div>
+        <div class="board_square"></div>
+        <div class="board_square"></div>
+        <div class="board_square"></div>
+    </div>
+
 </body>
 </html>
