--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <h1>Tic Tac Toe</h1>
     <div class="input_container">
         <input type="text" name="player_one_name" id="player_one" placeholder="Player Name">
+        <button id="button_player_one">Submit</button>
         <input type="text" name="player_two_name" id="player_two" placeholder="Player Name">
+        <button id="button_player_two">Submit</button>
     </div>
     <div class="board_container"></div>
 
