--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1>Tic Tac Toe</h1>
+    <h1>Noughts and Crosses</h1>
     <div class="input_container">
         <input type="text" name="player_one_name" id="player_one" placeholder="Player Name">
         <button id="button_player_one">Submit</button>
@@ -17,6 +17,8 @@
         <button id="button_player_two">Submit</button>
     </div>
     <div class="board_container"></div>
-
+    <div id="player_one_name">Noughts: </div>
+    <div id="player_two_name">Crosses: </div>
+    <div id="game_state"></div>
 </body>
 </html>
