Add text that displays the state of the game and declares winner / draw.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <button id="button_player_two">Submit</button>
     </div>
     <div class="board_container"></div>
-    <div id="player_one_name">Noughts: </div>
-    <div id="player_two_name">Crosses: </div>
-    <div id="game_state"></div>
+    <div class="name_display_container">
+        <div id="player_one_name">Crosses: </div>
+        <div id="player_two_name">Noughts: </div>
+    </div>
+    <div id="game_state">Please submit two player names to start!</div>
 </body>
 </html>
