Add a working reset button.

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
         <div id="player_two_name">Noughts: </div>
     </div>
     <div id="game_state">Please submit two player names to start!</div>
+    <button class="reset_button">Reset</button>
 </body>
 </html>
