Style the page with some CSS.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <h1>Noughts and Crosses</h1>
     <div class="input_container">
-        <input type="text" name="player_one_name" id="player_one" placeholder="Player Name">
+        <input type="text" name="player_one_name" id="player_one" placeholder="Player Name" size="1">
         <button id="button_player_one">Submit</button>
-        <input type="text" name="player_two_name" id="player_two" placeholder="Player Name">
+        <input type="text" name="player_two_name" id="player_two" placeholder="Player Name" size="1">
         <button id="button_player_two">Submit</button>
     </div>
     <div class="board_container"></div>
